--- a/FireApp/app/build.gradle
+++ b/FireApp/app/build.gradle
@@ -35,6 +35,15 @@ dependencies {
         transitive = true
     }
 
+    def nav_version = "1.0.0-alpha06"
+
+    implementation "android.arch.navigation:navigation-fragment:$nav_version" // use -ktx for Kotlin
+    implementation "android.arch.navigation:navigation-ui:$nav_version" // use -ktx for Kotlin
+
+    // optional - Test helpers
+    androidTestImplementation "android.arch.navigation:navigation-testing:$nav_version" // use -ktx for Kotlin
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
